--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,7 @@ project(MatMulAlgorithms)
 
 set(CMAKE_CXX_STANDARD 23)
 add_executable(main main.cpp)
+
+# Add the main executable as a test
+enable_testing()
+add_test(NAME MainTest COMMAND main)
